# rust-stocks

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: Stocks.toml  api.rs  config.rs  lib.rs  main.rs  plot.rs
