[package]
name = "stocks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
plotters = "0.3.7"
reqwest = { version = "0.13", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
